# google-gmail-tool

./: .gitleaks.toml  .mise.toml  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude-plugin/: marketplace.json
architecture/: README.md
google_gmail_tool/: __init__.py  cli.py  logging_config.py  utils.py
google_gmail_tool/commands/: __init__.py  auth_commands.py  calendar_commands.py  calendar_create_update_delete.py  completion_commands.py  drive_commands.py  drive_file_operations.py  drive_folder_operations.py  mail_commands.py  skill_commands.py  task_commands.py  task_create_update_delete.py
google_gmail_tool/core/: __init__.py  auth.py  calendar_client.py  drive_client.py  gmail_client.py  obsidian_calendar_exporter.py  obsidian_exporter.py  obsidian_task_exporter.py  task_client.py
plugins/google-gmail-tool/.claude-plugin/: plugin.json
plugins/google-gmail-tool/commands/: auth-check.md  calendar-list.md  drive-search.md  mail-list.md  mail-send.md  task-list.md
references/: oauth-credentials-explained.md
tests/: __init__.py  test_task_client.py  test_utils.py
